Updated file upload view in portfolio new and fixed cover fit in home page on mobiles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -154,7 +154,7 @@ body {
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
   background: image-url('home_bg.jpg') no-repeat;
-  background-size: 100%;
+  background-size: cover;
   background-position: center;
 }
 
